--- a/challenge.html
+++ b/challenge.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Ensino de programação, lógica e robótica por meio de  desenvolvimento de games" />
-  <meta name="author" content="Mariugo Megiani" />
-  <link rel="shortcut icon" href="images/logo.ico" type="image/x-icon" />
-  <title>Code Clube Votuporanga - Game Challenge</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
-  <link rel="stylesheet" href="css/main.css" />
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Ensino de programação, lógica e robótica por meio de  desenvolvimento de games"
+    />
+    <meta name="author" content="Mariugo Megiani" />
+    <link rel="shortcut icon" href="images/logo.ico" type="image/x-icon" />
+    
+    <title>Code Clube Votuporanga</title>
+
+    <<!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"/>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+    />
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
 
 <body>
   <!-- Navigation Bar -->
@@ -727,7 +735,7 @@
       <div class="row">
         <div class="col-md-8 col-sm-6 col-xs-12">
           <p class="copyright-text">
-            Copyright &copy; 2021 Todos os Direitos Reservados. Desenvolvido
+            Copyright &copy; 2022 Todos os Direitos Reservados. Desenvolvido
             por
             <a href="https://www.linkedin.com/in/mariugo-megiani/" target="_blank">Mariugo Megiani</a>.
           </p>
@@ -755,6 +763,9 @@
       </div>
     </div>
   </footer>
+
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
   <script>
     const mobileBtn = document.getElementById("mobile-cta");
