--- a/games.html
+++ b/games.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,19 +10,18 @@
     />
     <meta name="author" content="Mariugo Megiani" />
     <link rel="shortcut icon" href="images/logo.ico" type="image/x-icon" />
-    <title>Code Clube Votuporanga - Nossos Games</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-      crossorigin="anonymous"
-    />
+    
+    <title>Code Clube Votuporanga</title>
+
+    <<!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"/>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
     />
     <link rel="stylesheet" href="css/main.css" />
   </head>
+
   <body>
     <!-- Navigation Bar -->
     <div class="navbar">
@@ -48,7 +48,7 @@
             <li><a href="games.html">Nossos Games</a></li>
             <li><a href="photos.html">Fotos</a></li>
             <li><a href="challenge.html">Game Challenge</a></li>
-            <li><a href="videos.html">Videos</a></li>
+            <li><a href="materiais.html">Materiais</a></li>
           </ul>
 
           <ul class="secondary-nav">
@@ -207,7 +207,7 @@
         <div class="row">
           <div class="col-md-8 col-sm-6 col-xs-12">
             <p class="copyright-text">
-              Copyright &copy; 2021 Todos os Direitos Reservados. Desenvolvido
+              Copyright &copy; 2022 Todos os Direitos Reservados. Desenvolvido
               por
               <a href="https://www.linkedin.com/in/mariugo-megiani/" target="_blank"
                 >Mariugo Megiani</a
@@ -251,6 +251,9 @@
         </div>
       </div>
     </footer>
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     <script>
       const mobileBtn = document.getElementById("mobile-cta");
