--- a/challenge.html
+++ b/challenge.html
@@ -38,7 +38,7 @@
           <li><a href="games.html">Nossos Games</a></li>
           <li><a href="photos.html">Fotos</a></li>
           <li><a href="challenge.html">Game Challenge</a></li>
-          <li><a href="videos.html">Videos</a></li>
+          <li><a href="materiais.html">Materiais</a></li>
         </ul>
 
         <ul class="secondary-nav">
