--- a/news.html
+++ b/news.html
@@ -62,6 +62,12 @@
 
     <!-- News section -->
     <section class="container">
+
+      <h1 class="pb-5">Presença na SNCT 2021</h1>
+    <iframe src="https://youtu.be/hiCOeInwzKg?t=7219" style="border: none;"></iframe>
+    <p class="text-end mt-5">Postado em 04 de dezembro de 2021</p>
+    <hr/>
+      
     <h1 class="pb-5">Formação Code Clube 2021</h1>
     <div class="row justify-content-evenly row-cols-1 row-cols-md-2 g-4 ">
       <div class="col">
@@ -215,7 +221,7 @@
         <div class="row">
           <div class="col-md-8 col-sm-6 col-xs-12">
             <p class="copyright-text">
-              Copyright &copy; 2022 Todos os Direitos Reservados. Desenvolvido
+              Copyright &copy; 202 Todos os Direitos Reservados. Desenvolvido
               por
               <a href="https://www.linkedin.com/in/mariugo-megiani/"
                 >Mariugo Megiani</a
