Fotos Fashion done

--- a/photos.html
+++ b/photos.html
@@ -60,6 +60,103 @@
     
  <!-- Photos Section -->
  <section class="white-section">
+  <h1>Electronic Fashion 2021</h1>
+  <h2>Desenvolvimento com Arduino</h2>
+      <div class="tz-gallery">
+        <div class="row mb-4">
+          <div class="col-md-4">
+              <a class="lightbox" href="photos/2021/ef4.jpeg">
+                <img
+                  src="photos/2021/ef4.jpeg"
+                  alt="Aluno em aula EAD"
+                  class="card-img-top"
+                />
+              </a>
+          </div>
+          <div class="col-md-4">
+            <a class="lightbox" href="photos/2021/ef5.jpeg">
+              <img
+                src="photos/2021/ef5.jpeg"
+                alt="Aluno em aula EAD"
+                class="card-img-top"
+              />
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a class="lightbox" href="photos/2021/ef6.jpeg">
+              <img
+                src="photos/2021/ef6.jpeg"
+                alt="Aluno em aula EAD"
+                class="card-img-top"
+              />
+            </a>
+          </div>
+        </div>
+        <div class="row mb-4"> 
+          <div class="col-md-4">
+            <a class="lightbox" href="photos/2021/ef7.jpeg">
+              <img
+                src="photos/2021/ef7.jpeg"
+                alt="Aluno em aula EAD"
+                class="card-img-top"
+              />
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a class="lightbox" href="photos/2021/ef8.jpeg">
+              <img
+                src="photos/2021/ef8.jpeg"
+                alt="Aluno em aula EAD"
+                class="card-img-top"
+              />
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a class="lightbox" href="photos/2021/ef9.jpeg">
+              <img
+                src="photos/2021/ef9.jpeg"
+                alt="Aluno em aula EAD"
+                class="card-img-top"
+              />
+            </a>
+          </div>
+        </div>
+        <div class="row mb-4">  
+          <div class="col-md-4">
+            <a class="lightbox" href="photos/2021/ef3.jpeg">
+              <img
+                src="photos/2021/ef3.jpeg"
+                alt="Aluno em aula EAD"
+                class="card-img-top"
+              />
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a class="lightbox" href="photos/2021/ef11.jpeg">
+              <img
+                src="photos/2021/ef11.jpeg"
+                alt="Aluno em aula EAD"
+                class="card-img-top"
+              />
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a class="lightbox" href="photos/2021/ef12.jpeg">
+              <img
+                src="photos/2021/ef12.jpeg"
+                alt="Aluno em aula EAD"
+                class="card-img-top"
+              />
+            </a>
+          </div>
+        
+</section>  
+
+
+
+
+
+ <section class="white-section">
   <h1>Code Clube 2021</h1>
   <h2>Aulas virtuais</h2>
       <div class="tz-gallery">
