--- a/news.html
+++ b/news.html
@@ -64,9 +64,8 @@
     <section class="container">
 
       <h1 class="pb-5">Presença na SNCT 2021</h1>
-    <iframe src="https://youtu.be/hiCOeInwzKg?t=7219" style="border: none;"></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/hiCOeInwzKg?start=7199" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p class="text-end mt-5">Postado em 04 de dezembro de 2021</p>
-    <hr/>
       
     <h1 class="pb-5">Formação Code Clube 2021</h1>
     <div class="row justify-content-evenly row-cols-1 row-cols-md-2 g-4 ">
